# container_monitor

./: .gitignore  Doxyfile  README.md  cgroups_resource_reader.py  container monitor.md  folder.md
App/: CMakeLists.txt  main.cpp
App/analysis/: CMakeLists.txt
App/analysis/inc/: live_metric_aggregator.hpp
App/analysis/src/: live_metric_aggregator.cpp
App/cgroup/: CMakeLists.txt
App/container_runtime/: CMakeLists.txt
App/container_runtime/inc/: container_runtime_configuration.hpp  container_runtime_factory_interface.hpp  docker_cgroup_v1_path.hpp
App/container_runtime/src/: container_runtime_configuration.cpp
App/database/: CMakeLists.txt
App/database/inc/: database_interface.hpp  embedded_database.hpp  sqlite_database.hpp
App/database/src/: embedded_database.cpp  sqlite_database.cpp
App/kernel/: CMakeLists.txt
App/metrics_analyzer/: CMakeLists.txt
App/metrics_analyzer/inc/: metrics_reader.hpp
App/metrics_analyzer/src/: metrics_reader.cpp
App/monitoring_service/: CMakeLists.txt
App/monitoring_service/inc/: event_listener.hpp  event_processor.hpp  event_queue.hpp  resource_monitor.hpp  resource_thread_pool.hpp  runtime_event_listener.hpp
App/monitoring_service/src/: event_listener.cpp  event_processor.cpp  event_queue.cpp  resource_monitor.cpp  resource_thread_pool.cpp  runtime_event_listener.cpp
App/runtime/: CMakeLists.txt
App/ui/: CMakeLists.txt
App/ui/inc/: monitor_dashboard.hpp
App/ui/src/: monitor_dashboard.cpp
App/utils/: CMakeLists.txt
App/utils/inc/: common.hpp  config_parser.hpp  initializer.hpp  json_processing.hpp  logger.hpp
App/utils/src/: config_parser.cpp  initializer.cpp  json_processing.cpp
config/: create_config_gui.py  parameter.conf
docs/architecture/: architecture.md  architecture_diagram.md
docs/doxygen/html/: CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  README_8md.html  annotated.html  annotated_dup.js  architecture_8md.html  classConfigParser-members.html  classConfigParser.html  classConfigParser.js  classConfigParser__coll__graph.map  classConfigParser__coll__graph.md5  classConfigParser_a5e10151c9663b93869b1bc07db0053e7_icgraph.map  classConfigParser_a5e10151c9663b93869b1bc07db0053e7_icgraph.md5  classConfigParser_a715ade3c05d0589a4c002d0c2267c3dc_icgraph.map  classConfigParser_a715ade3c05d0589a4c002d0c2267c3dc_icgraph.md5  classConfigParser_a7ecd8fa23a2651c59bae6b865725b59b_cgraph.map  classConfigParser_a7ecd8fa23a2651c59bae6b865725b59b_cgraph.md5  classConfigParser_a7ecd8fa23a2651c59bae6b865725b59b_icgraph.map  classConfigParser_a7ecd8fa23a2651c59bae6b865725b59b_icgraph.md5  classConfigParser_a98620e3bc1a71887f39cdb0a8a8acd26_cgraph.map  classConfigParser_a98620e3bc1a71887f39cdb0a8a8acd26_cgraph.md5  classConfigParser_a98620e3bc1a71887f39cdb0a8a8acd26_icgraph.map  classConfigParser_a98620e3bc1a71887f39cdb0a8a8acd26_icgraph.md5  classConfigParser_aaee708b5d56ede07e9109986ef096125_cgraph.map  classConfigParser_aaee708b5d56ede07e9109986ef096125_cgraph.md5  classConfigParser_aaee708b5d56ede07e9109986ef096125_icgraph.map  classConfigParser_aaee708b5d56ede07e9109986ef096125_icgraph.md5  classConfigParser_ae5d32c782f74de2f881c0ebc5aeaf3a5_cgraph.map  classConfigParser_ae5d32c782f74de2f881c0ebc5aeaf3a5_cgraph.md5  classConfigParser_ae5d32c782f74de2f881c0ebc5aeaf3a5_icgraph.map  classConfigParser_ae5d32c782f74de2f881c0ebc5aeaf3a5_icgraph.md5  classConfigParser_af1bfcf1ded3a672012fb3a24c2f41f39_icgraph.map  classConfigParser_af1bfcf1ded3a672012fb3a24c2f41f39_icgraph.md5  classDockerCgroupV1PathFactory-members.html  classDockerCgroupV1PathFactory.html  classDockerCgroupV1PathFactory.js  classDockerCgroupV1PathFactory__coll__graph.map  classDockerCgroupV1PathFactory__inherit__graph.md5  classEventProcessor-members.html  classEventProcessor.html  (+611 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  (+38 more)
post_analysis/: plot_container_metrics.py
sandbox/: Dockerfile  cgroups_resource_reader.py  container_monitor.md  read_mq.py  test_struct.cpp
storage/: plot_container_cpu.py  plot_container_metrics.py
